nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # ye mera bahar ka port hai
      targetPort: 80 # ye mera pod ka port hai
  type: ClusterIP #it is default service type if we not use anything
